Setting .devcontainer, eslint. Adding TS. Creating init tables and data for DB. Adding to BE routes, utils and controllers for Authentification. Adding to FE Authentification functionality.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,5 +10,5 @@
 			]
 		}
 	},
-	"postCreateCommand": "npm install -g nodemon"
+	"postCreateCommand": "npm install -g nodemon && git config --global --add safe.directory /workspaces"
 }
